kubernetes/apps/security/authentik/app/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-authentik-access
  namespace: security
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: home-automation
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: monitoring
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: network
  to:
    - group: ""
      kind: Service
      name: authentik-server
